--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ header {
     position: fixed;
     top: 0px;
     height: auto;
-    padding-bottom: 15px;
+    padding-bottom: 0px;
     z-index: 100;
 
     .navbar-brand {
@@ -63,7 +63,7 @@ main {
 .footer {
     background-color: $darkOrange;
     width: 100%;
-    max-height: 10%;
+    max-height: 8%;
     display: flex;
     margin-top: 20px;
 
@@ -104,14 +104,14 @@ main {
         text-align: right;
         font-weight: bold;
         display: inline-block;
-        width: 50%;
+        width: 100%;
         animation-name: aparicion;
         animation-duration: 2s;
     }
     
     .carousel {
         height: 300px;
-        width: 500px;
+        width: 100%;
         animation-name: aparicion;
         animation-duration: 2s;
     }
@@ -547,6 +547,10 @@ iframe {
         .textoInicial {
             font-size: 1.8em;
             width: 30%;
+        }
+
+        .carousel {
+            width: 500px;
         }
     }
 
