quinto commit arreglos index

--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -33,8 +33,7 @@ header {
 
 main {
   background-color: #0d0d0d;
-  margin-top: 50px;
-  margin-bottom: -20px; }
+  margin-top: 50px; }
 
 .footer {
   background-color: #BF6B04;
