--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -321,7 +321,7 @@ form {
   padding-bottom: 10em; }
   form fieldset {
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     padding: 2em; }
     form fieldset .input-group {
       width: 100%; }
@@ -356,4 +356,6 @@ iframe {
       width: 25%; }
   .historias__imagen {
     width: 500px;
-    height: 300px; } }
+    height: 300px; }
+  form fieldset {
+    width: 50%; } }
