--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,7 +142,7 @@ main {
                          "navProd imgAmps"
                          "navProd textAmps";
     grid-template-rows: repeat(10, 0.2fr);
-    grid-template-columns: 1fr 9fr;
+    grid-template-columns: 1fr 12fr;
 
     &__nav {
         grid-area: navProd;
@@ -155,15 +155,17 @@ main {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            padding-left: 0px;
 
             li {
-                padding: 10px;
+                padding: 0px;
                 list-style-type: none;
 
                 .productos__opciones {
                     text-decoration: none;
                     font-family: 'Oswald', sans-serif;
                     color: $lightOrange;
+                    font-size: 	0.5em;
                 }
             }
         }
@@ -187,8 +189,8 @@ main {
         justify-content: space-around;
 
         #guitarOne {
-            height: 10rem;
-            width: 5rem;
+            height: 5em;
+            width: 2.5em;
             transition: 0.5s;
 
             &:hover {
@@ -199,8 +201,8 @@ main {
         
         
         #guitarTwo{
-            height: 10rem;
-            width: 4rem;
+            height: 5em;
+            width: 2em;
             transition: 0.5s;
 
             &:hover {
@@ -211,8 +213,8 @@ main {
         
         
         #guitarThree {
-            height: 10rem;
-            width: 5rem;
+            height: 5em;
+            width: 2.5em;
             transition: 0.5s;
 
             &:hover {
@@ -231,7 +233,7 @@ main {
         justify-content: space-around;
 
         .productos__guitarra__nombre {
-            @include text(#dddddd, 1em, $mainFont)
+            @include text(#dddddd, 0.5em, $mainFont)
         }
     }
     
@@ -248,8 +250,8 @@ main {
         justify-content: space-around;
 
         #bassOne {
-            height: 10rem;
-            width: 5rem;
+            height: 5em;
+            width: 2.5em;
             transition: 0.5s;
 
             &:hover {
@@ -261,8 +263,8 @@ main {
         
         
         #bassTwo {
-            height: 10rem;
-            width: 4rem;
+            height: 5em;
+            width: 2em;
             transition: 0.5s;
 
             &:hover {
@@ -273,8 +275,8 @@ main {
         
         
         #bassThree {
-            height: 10rem;
-            width: 4rem;
+            height: 5em;
+            width: 2em;
             transition: 0.5s;
 
             &:hover {
@@ -292,7 +294,7 @@ main {
         justify-content: space-around;
 
         .productos__bajo__nombre {
-            @include text(#dddddd, 1em, $mainFont)
+            @include text(#dddddd, 0.5em, $mainFont)
         }
     }
     
@@ -309,8 +311,8 @@ main {
         justify-content: space-around;
 
         #drumsOne {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -322,8 +324,8 @@ main {
         
         
         #drumsTwo {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -335,8 +337,8 @@ main {
         
         
         #drumsThree {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -354,7 +356,7 @@ main {
         justify-content: space-around;
 
         .productos__bateria__nombre {
-            @include text(#dddddd, 1em, $mainFont)
+            @include text(#dddddd, 0.5em, $mainFont)
         }
     }
     
@@ -371,8 +373,8 @@ main {
         justify-content: space-around;
 
         #ampOne {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -384,8 +386,8 @@ main {
         
         
         #ampTwo {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -397,8 +399,8 @@ main {
         
         
         #ampThree {
-            height: 10rem;
-            width: 10rem;
+            height: 5em;
+            width: 5em;
             transition: 0.5s;
 
             &:hover {
@@ -417,7 +419,7 @@ main {
         justify-content: space-around;
 
         .productos__amp__nombre {
-            @include text(#dddddd, 1em, $mainFont)
+            @include text(#dddddd, 0.5em, $mainFont)
         }
     }
 }
@@ -560,6 +562,103 @@ iframe {
         }
     }
 
+    .productos {
+        &__nav {
+            ul {
+                li {
+                    .productos__opciones {
+                        font-size: 1em;
+                    }
+                }
+            }
+        }
+        &__guitarra__imagen {
+            #guitarOne {
+                height: 10em;
+                width: 5em;
+            }
+            #guitarTwo {
+                height: 10em;
+                width: 4em;
+            }
+            #guitarThree {
+                height: 10em;
+                width: 5em;
+            }
+
+        }
+
+        &__guitarra__texto {
+            .productos__guitarra__nombre {
+                @include text(#dddddd, 1em, $mainFont)
+            }
+        }
+
+        &__bajo__imagen {
+            #bassOne {
+                height: 10rem;
+                width: 5rem;
+            }
+
+            #bassTwo {
+                height: 10rem;
+                width: 4rem;
+            }
+
+            #bassThree {
+                height: 10rem;
+                width: 4rem;
+            }
+        }
+
+        &__bajo__texto {
+            .productos__bajo__nombre {
+                @include text(#dddddd, 1em, $mainFont)
+            }
+        }
+
+        &__bateria__imagen{
+            #drumsOne {
+                height: 10rem;
+                width: 10rem;
+            }
+            #drumsTwo {
+                height: 10rem;
+                width: 10rem;
+            }
+            #drumsThree {
+                height: 10rem;
+                width: 10rem;
+            }
+        }
+
+        &__bateria__texto {
+            .productos__bateria__nombre {
+                @include text(#dddddd, 1em, $mainFont)
+            }
+        }
+
+        &__amp__imagen {
+            #ampOne {
+                height: 10rem;
+                width: 10rem;
+            }
+            #ampTwo {
+                height: 10rem;
+                width: 10rem;
+            }
+            #ampThree {
+                height: 10rem;
+                width: 10rem;
+            }
+        }
+
+        &__amp__texto {
+            .productos__amp__nombre {
+                @include text(#dddddd, 1em, $mainFont)
+            }
+        }
+    }
     .pictures {
         display: flex;
 
