--- a/scss/style.scss
+++ b/scss/style.scss
@@ -149,6 +149,7 @@ main {
         background-image: linear-gradient(to right, $lightOrange, $darkBackground);
         margin-top: 0px;
         height: 100%;
+        display: none;
 
         ul {
             height: 50%;
@@ -156,16 +157,19 @@ main {
             flex-direction: column;
             justify-content: space-around;
             padding-left: 0px;
+            display: none;
 
             li {
                 padding: 0px;
                 list-style-type: none;
+                display: none;
 
                 .productos__opciones {
                     text-decoration: none;
                     font-family: 'Oswald', sans-serif;
                     color: $lightOrange;
                     font-size: 	0.5em;
+                    display: none
                 }
             }
         }
@@ -564,10 +568,16 @@ iframe {
 
     .productos {
         &__nav {
+            display: flex;
             ul {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
                 li {
+                    display: block;
                     .productos__opciones {
                         font-size: 1em;
+                        display: inline-block;
                     }
                 }
             }
