--- a/scss/style.scss
+++ b/scss/style.scss
@@ -529,6 +529,10 @@ form {
             border-radius: 4px;
             margin-left: 1em;
         }
+
+        .form-check-label {
+            color: $lightOrange;
+        }
     }
 }
 
