--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,6 +124,13 @@ main {
     padding-top: 20px;
 }
 
+.logo {
+    width: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+}
+
 /*ESTILO GALERIA*/
 
 .productos {
@@ -167,7 +174,7 @@ main {
                 .productos__opciones {
                     text-decoration: none;
                     font-family: 'Oswald', sans-serif;
-                    color: $lightOrange;
+                    color: beige;
                     font-size: 	0.5em;
                     display: none
                 }
@@ -538,6 +545,7 @@ form {
 
 iframe {
     width: 100%;
+    padding: 0em 5em;
 }
 
 
