--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,8 @@ main {
         justify-content: space-evenly;
         width: 40%;
         list-style-type: none;
+        align-self: center;
+        margin-bottom: 0px;
     }
 
     &__disclaimer {
@@ -79,8 +81,9 @@ main {
         font-size: 0.5em;
         text-align: left;
         font-family: 'Oswald', sans-serif;
-        padding: 10px;
+        padding: 10px 10px 0px 10px;
         width: 60%;
+        align-self: center;
     }
 
     &__link {
@@ -96,7 +99,7 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-bottom: 200px;
+    padding-bottom: 100px;
     flex-direction: column;
 
     .textoInicial {
@@ -114,6 +117,11 @@ main {
         width: 100%;
         animation-name: aparicion;
         animation-duration: 2s;
+        
+
+        .d-block {
+            border-radius: 500px;
+        }
     }
 }
 
@@ -572,7 +580,7 @@ iframe {
         flex-direction: row;
 
         .textoInicial {
-            font-size: 1.8em;
+            font-size: 1.5em;
             width: 30%;
             text-align: right;
         }
