--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,6 +137,7 @@ main {
     background-color: black;
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 
     &__imagen {
         height: 88.5px;
