--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -97,7 +97,8 @@ main {
   width: 100%;
   background-color: black;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-bottom: 10px; }
   .logo__imagen {
     height: 88.5px;
     width: 250px; }
