--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -40,6 +40,7 @@ main {
   width: 100%;
   max-height: 8%;
   display: flex;
+  position: relative;
   bottom: 0px; }
   .footer__list {
     display: flex;
