--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -36,12 +36,13 @@ main {
   margin-top: 50px; }
 
 .footer {
-  background-color: #BF6B04;
+  background-color: #0d0d0d;
   width: 100%;
   max-height: 8%;
   display: flex;
   position: relative;
-  bottom: 0px; }
+  bottom: 0px;
+  border-top: #BF6B04 1px solid; }
   .footer__list {
     display: flex;
     justify-content: space-evenly;
@@ -50,7 +51,7 @@ main {
     align-self: center;
     margin-bottom: 0px; }
   .footer__disclaimer {
-    color: #0d0d0d;
+    color: beige;
     font-size: 0.5em;
     text-align: left;
     font-family: 'Oswald', sans-serif;
@@ -59,8 +60,8 @@ main {
     align-self: center; }
   .footer__link {
     text-decoration: none;
-    color: #0d0d0d;
-    font-size: 1em; }
+    color: beige;
+    font-size: 1.2em; }
 
 /*ESTILO INDEX*/
 #mainContent {
