--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,12 +60,13 @@ main {
 }
 
 .footer {
-    background-color: $darkOrange;
+    background-color: $darkBackground;
     width: 100%;
     max-height: 8%;
     display: flex;
     position: relative;
     bottom: 0px;
+    border-top: $darkOrange 1px solid;
 
     &__list {
         display: flex;
@@ -77,7 +78,7 @@ main {
     }
 
     &__disclaimer {
-        color: $darkBackground;
+        color: beige;
         font-size: 0.5em;
         text-align: left;
         font-family: 'Oswald', sans-serif;
@@ -88,8 +89,8 @@ main {
 
     &__link {
         text-decoration: none;
-        color: $darkBackground;
-        font-size: 1em;
+        color: beige;
+        font-size: 1.2em;
     }
 }
 
