--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,7 @@ main {
     justify-content: space-around;
     align-items: center;
     padding-bottom: 100px;
-    flex-direction: column;
+    flex-direction: column-reverse;
 
     .textoInicial {
         @include text($lightOrange, 1em, 'Architects Daughter');
